5 Building a Full Screen Widget, sidebar

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,14 @@ flutter:
 
   # To add Flutter specific assets to your application, add an assets section,
   # like this:
-#  assets:
-#    - assests/images/
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assests/badges/
+    - assests/certificates/
+    - assests/icons/
+    - assests/illustrations/
+    - assests/images/
+    - assests/logos/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -59,11 +64,12 @@ flutter:
   # have a "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: SF Pro Text
+      fonts:
+        - asset: assests/fonts/SFProText-Regular.ttf
+        - asset: assests/fonts/SFProText-Bold.ttf
+          weight: 800
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
