--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,9 @@
 name: suriyawonwin
-description: A new Flutter project.
+description: A new Flutter application.
+
+# The following line prevents the package from being accidentally published to
+# pub.dev using `pub publish`. This is preferred for private packages.
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -11,24 +15,20 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-#
-# This version is used _only_ for the Runner app, which is used if you just do
-# a `flutter run` or a `flutter make-host-app-editable`. It has no impact
-# on any other native host app that you embed your Flutter project into.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  english_words: ^4.0.0-0
-
+  cupertino_icons: ^0.1.3
+  sliding_up_panel: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -36,58 +36,23 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+# The following section is specific to Flutter.
 flutter:
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
-  # To add Flutter specific assets to your application, add an assets section,
-  # like this:
   assets:
-    - assests/badges/
-    - assests/certificates/
-    - assests/icons/
-    - assests/illustrations/
-    - assests/images/
-    - assests/logos/
-
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add Flutter specific custom fonts to your application, add a fonts
-  # section here, in this "flutter" section. Each entry in this list should
-  # have a "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
+    - asset/badges/
+    - asset/certificates/
+    - asset/icons/
+    - asset/illustrations/
+    - asset/images/
+    - asset/logos/
   fonts:
     - family: SF Pro Text
       fonts:
-        - asset: assests/fonts/SFProText-Regular.ttf
-        - asset: assests/fonts/SFProText-Bold.ttf
+        - asset: asset/fonts/SFProText-Regular.ttf
+        - asset: asset/fonts/SFProText-Bold.ttf
           weight: 800
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
-
-
-  # This section identifies your Flutter project as a module meant for
-  # embedding in a native host app.  These identifiers should _not_ ordinarily
-  # be changed after generation - they are used to ensure that the tooling can
-  # maintain consistency when adding or modifying assets and plugins.
-  # They also do not have any bearing on your native host application's
-  # identifiers, which may be completely independent or the same as these.
-  module:
-    androidX: true
-    androidPackage: com.example.suriyawonwin
-    iosBundleIdentifier: com.example.suriyawonwin
